# code-challenge-2024-Minimega12121

./: Cargo.toml  SOLUTION.md  code.txt  output.txt  run.sh
src/: draft.rs  main.rs  move.rs  verifier.rs
src/p2pkh_verifier/: mod.rs  p2pkh.rs
src/p2wpkh_verifier/: mod.rs  p2wpkh.rs
