[package]
name = "verifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
chrono = "0.4.38"
hex = "0.4.3"
num-bigint = "0.4.4"
num-traits = "0.2.18"
ripemd = "0.1.3"
secp256k1 = "0.29.0"
serde_json = "1.0.115"
sha2 = "0.10.8"




